fix too small popup header

--- a/app/styles.scss/main.scss
+++ b/app/styles.scss/main.scss
@@ -106,7 +106,7 @@
     color: #A5A4A4;
     background-color: white;
     border-bottom: 1px solid #e4e4e4;
-    font-size: 11px;
+    font-size: 13px;
     padding: 5px;
     padding-right: 15px;
     background-position: 4px 4px;
